Add lib/ to classpath and set java.security.manager if a security policy is set